Changes in QMPlay2 build 17.01.14:
	- fix updating covers (also title, artist and album outside QMPlay2) in network streams,
	- add "Lock" flag for playlist entry - don't allow to remove it,
	- equalizer improvements (presets must be set again),
	- add "Skip" and "Stop after" flags for playlist,
	- add Profiles (Zamarin Arthur),

Changes in QMPlay2 build 16.12.23:
	- new Notifications module (Zamarin Arthur),
	- use cookies obtained from "youtube-dl",
	- add Bauer stereophonic-to-binaural DSP,
	- updated German translation (martinkg),
	- add audio dynamic range compressor,
	- bugfix,

Changes in QMPlay2 build 16.11.20:
	- display real FPS and interlaced video information on Information panel,
	- VA-API displays using OpenGL (default behavior),
	- updated German translation (martinkg),
	- add DXVA2 decoder (limited features),
	- fix seeking on interlaced videos,
	- CUVID bugfix,

Changes in QMPlay2 build 16.11.01:
	- properly read styles from MPL, MicroDVD and SubRip format,
	- add CUVID decoder,
	- bugfix,

Changes in QMPlay2 build 16.10.14:
	- fix issue (deadlock/crash) if playback has been stopped when FFmpeg resolves a hostname,
	- PortAudio fixes (especially for Windows),
	- better finding subtitles files for video,
	- bugfix,

Changes in QMPlay2 build 16.09.24:
	- use namespace on libmodplug - don't mix system and QMPlay2 modplug,
	- fix screen saver inhibition regression,

Changes in QMPlay2 build 16.09.21:
	- updated icon for YouTube quality button,
	- fix screen saver blocking behavior,
	- OpenGL2 bugfix,

Changes in QMPlay2 build 16.09.04:
	- don't load subtitles which needs decoder without the decoder,
	- add checkbox to disable PBO in OpenGL2 module settings,
	- fix displaying multi-line graphical subtitles,
	- don't crop non-graphics subtitles on zoom,
	- add quality button in YouTube browser,
	- download "youtube-dl" if necessary,
	- get rid of "QtNetwork" module,
	- add MPEG-TS programs support,

Changes in QMPlay2 build 16.08.19: