@@ -17,58 +17,56 @@
 */
 
 #include <FreedesktopNotify.hpp>
-#include <QMPlay2Core.hpp>
-#include <Module.hpp>
 
 #include "notifications_interface.h"
 
-#include <QDBusArgument>
-
 #define FreedesktopNotifyName "Freedesktop Notify"
 
-#if 0 //For future use
 QDBusArgument &operator<<(QDBusArgument &arg, const QImage &image)
 {
-	if (image.isNull())
+	QImage scaledImage;
+	if (!image.isNull())
 	{
-		// Sometimes this gets called with a null QImage for no obvious reason.
-		arg.beginStructure();
-		arg << 0 << 0 << 0 << false << 0 << 0 << QByteArray();
-		arg.endStructure();
-		return arg;
+		scaledImage = image.scaled(200, 100, Qt::KeepAspectRatio, Qt::SmoothTransformation);
+		if (scaledImage.format() != QImage::Format_ARGB32)
+			scaledImage = scaledImage.convertToFormat(QImage::Format_ARGB32);
+		scaledImage = scaledImage.rgbSwapped();
 	}
-	const QImage scaled = image.scaledToHeight(100, Qt::SmoothTransformation).convertToFormat(QImage::Format_ARGB32);
-	// ABGR -> ARGB
-	const QImage i = scaled.rgbSwapped();
+
+	const int channels = 4; // ARGB32 has 4 channels
 
 	arg.beginStructure();
-	arg << i.width();
-	arg << i.height();
-	arg << i.bytesPerLine();
-	arg << i.hasAlphaChannel();
-	int channels = i.isGrayscale() ? 1 : (i.hasAlphaChannel() ? 4 : 3);
-	arg << i.depth() / channels;
+	arg << scaledImage.width();
+	arg << scaledImage.height();
+	arg << scaledImage.bytesPerLine();
+	arg << scaledImage.hasAlphaChannel(); // Should be always "true" for ARGB32
+	arg << scaledImage.depth() / channels;
 	arg << channels;
 #if QT_VERSION < 0x050000
-	arg << QByteArray((const char *)(i.bits()), i.numBytes());
+	arg << QByteArray::fromRawData((const char *)scaledImage.constBits(), scaledImage.numBytes());
 #else
-	arg << QByteArray((const char *)(i.bits()), i.byteCount());
+	arg << QByteArray::fromRawData((const char *)scaledImage.constBits(), scaledImage.byteCount());
 #endif
 	arg.endStructure();
+
 	return arg;
 }
-const QDBusArgument &operator >>(const QDBusArgument &arg, QImage &)
+const QDBusArgument &operator >>(const QDBusArgument &arg, QImage &image)
 {
-	Q_ASSERT(0); // This is needed to link but shouldn't be called.
+	Q_UNUSED(image)
+	Q_ASSERT(!"This is needed to link but shouldn't be called");
 	return arg;
 }
-#endif
 
 FreedesktopNotify::FreedesktopNotify(qint32 timeout) :
 	Notify(timeout),
 	m_interface(new OrgFreedesktopNotificationsInterface(OrgFreedesktopNotificationsInterface::staticInterfaceName(), "/org/freedesktop/Notifications", QDBusConnection::sessionBus())),
-	m_notificationId(0)
-{}
+	m_notificationId(0),
+	m_notificationImg(false)
+{
+	static const int metaTypeId = qDBusRegisterMetaType<QImage>();
+	Q_UNUSED(metaTypeId);
+}
 FreedesktopNotify::~FreedesktopNotify()
 {
 	delete m_interface;
@@ -77,8 +75,14 @@ FreedesktopNotify::~FreedesktopNotify()
 bool FreedesktopNotify::showMessage(const QString &summary, const QString &message, const QString &icon, const QImage &image)
 {
 	QVariantMap hints;
+
+	//"image_data" is deprecated, "image-data" should be used for version >= 1.2
+
 	if (!image.isNull())
-		hints["image_data"] = QVariant(image);
+	{
+		hints["image_data"] = image;
+		m_notificationImg = true;
+	}
 
 	int id = 0;
 	if (m_lastNotificationTime.msecsTo(QDateTime::currentDateTime()) < m_timeout)
@@ -87,6 +91,17 @@ bool FreedesktopNotify::showMessage(const QString &summary, const QString &messa
 		// reuse the popup is because the notification daemon on KDE4 won't re-show
 		// the bubble if it's already gone to the tray.
 		id = m_notificationId;
+
+		if (m_notificationImg && image.isNull())
+		{
+			// Discard the image from the previous message.
+			QImage image(1, 1, QImage::Format_ARGB32);
+			image.fill(Qt::transparent);
+			hints["image_data"] = image;
+			m_notificationImg = false;
+		}
+
+		m_notificationId = 0;
 	}
 
 	const QDBusPendingReply<quint32> reply = m_interface->Notify(QCoreApplication::applicationName(), id, icon, summary, message, QStringList(), hints, m_timeout);
@@ -107,8 +122,8 @@ void FreedesktopNotify::callFinished(QDBusPendingCallWatcher *watcher)
 	const quint32 id = reply.value();
 	if (id != 0)
 	{
-		m_notificationId = id;
 		m_lastNotificationTime = QDateTime::currentDateTime();
+		m_notificationId = id;
 	}
 
 	watcher->deleteLater();
